RWD_HexRestaurant/css/all.css
@charset "UTF-8";
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

img {
  max-width: 100%;
  height: auto;
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: "Microsoft JhengHei", sans-serif;
}

.wrap {
  max-width: 1024px;
  margin: 0 auto;
  background-color: #efeae7;
}
.wrap .go-top {
  position: fixed;
  right: 20px;
  bottom: 20px;
  font-size: 2em;
}
@media (max-width: 569px) {
  .wrap .go-top {
    font-size: 1.5em;
  }
}
.wrap .go-top a {
  color: #3D1101;
}

.navbar {
  position: fixed;
  width: 100%;
  max-width: 1024px;
  background-color: rgba(0, 0, 0, 0.75);
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #ffffff;
  z-index: 2;
}
@media (max-width: 569px) {
  .navbar {
    position: fixed;
    padding: 16px 14px;
    background-color: #000000;
  }
}
.navbar .title {
  background-image: url(../images/index/logo_w@svg.svg);
  background-repeat: no-repeat;
  width: 120px;
  height: 24px;
  text-indent: 101%;
  white-space: nowrap;
  overflow: hidden;
  margin: 0px 16px;
}
@media (max-width: 569px) {
  .navbar .title {
    margin: 0px;
  }
}
.navbar .m-menu {
  display: none;
}
@media (max-width: 569px) {
  .navbar .m-menu {
    display: block;
    font-size: 1em;
  }
}
.navbar .menu {
  display: flex;
  align-items: center;
}
@media (max-width: 569px) {
  .navbar .menu {
    position: absolute;
    overflow: hidden;
    top: 56px;
    left: 0;
    right: 0;
    text-align: center;
    display: block;
    font-size: 1.5em;
    max-height: 0px;
    transition: max-height 1s;
    background-color: #efeae7;
  }
}
@media (max-width: 569px) {
  .navbar .menu li {
    width: 100%;
    background-color: #000000;
  }
}
.navbar .menu li a {
  display: block;
  padding: 16px 30px;
  text-decoration: none;
  color: #ffffff;
  font-size: 1em;
}
.navbar .menu li a:hover {
  background-color: #efeae7;
  color: #3D1101;
}

@media (max-width: 569px) {
  .show-mobile-menu .menu {
    max-height: 400px;
  }
}

.banner {
  background-image: url(../images/index/header_desktop.png);
  height: 420px;
  background-position: center center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  text-align: center;
}
@media (max-width: 569px) {
  .banner {
    background-image: url(../images/index/header_mobile.png);
  }
}
.banner .slogan {
  background-color: rgba(0, 0, 0, 0.35);
  padding: 20px 32px 26px 32px;
  line-height: 1.5;
}
@media (max-width: 569px) {
  .banner .slogan {
    padding: 20px 6px;
  }
}
.banner h2 {
  font-size: 2.25em;
  padding-bottom: 16px;
}
@media (max-width: 569px) {
  .banner h2 span {
    display: block;
  }
}
.banner h3 span {
  display: block;
}
.banner .fork-icon {
  color: #ffffff;
}

.footer {
  display: flex;
  justify-content: space-between;
  color: #3D1101;
  padding: 50px 42px;
}
@media (max-width: 569px) {
  .footer {
    flex-direction: column;
    padding: 50px 10px;
  }
}
.footer .about-contact {
  display: flex;
}
@media (max-width: 569px) {
  .footer .about-contact {
    flex-direction: column;
  }
}
.footer .about-contact .about, .footer .about-contact .contact {
  max-width: 299px;
  line-height: 1.5;
}
.footer .about-contact .title {
  font-size: 1.5em;
  padding-bottom: 16px;
}
.footer .contact {
  margin-left: 21px;
}
@media (max-width: 569px) {
  .footer .contact {
    margin: 30px 0px;
  }
}
.footer .contact .info {
  list-style-type: disc;
  margin-left: 21px;
  overflow-wrap: break-word;
}
.footer .contact .info li a {
  text-decoration: none;
  color: #3D1101;
}
.footer .brand-social .title {
  font-size: 3.06em;
  font-weight: bold;
}
@media (max-width: 569px) {
  .footer .brand-social .title {
    text-align: right;
  }
}
.footer .social-media {
  display: flex;
  justify-content: right;
  align-items: center;
  padding-top: 22px;
}
.footer .social-media .google-plus, .footer .social-media .twitter, .footer .social-media .facebook {
  border-radius: 4px;
  font-size: 2.25em;
  margin: 0px 6px;
}
.footer .social-media .google-plus {
  color: #d64433;
}
.footer .social-media .twitter {
  background-color: #41ABE1;
  font-size: 1.25em;
  padding: 6px;
  color: #ffffff;
}
.footer .social-media .facebook {
  color: #3a5795;
}

.why-delicious {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 50px 0px 31px 0px;
}
.why-delicious .text {
  position: relative;
  text-align: center;
  line-height: 1.5;
  font-size: 1.25em;
  color: #3D1101;
}
.why-delicious .middle-line::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 27%;
  transform: translateY(-50%);
  width: 12%;
  border-bottom: 1px solid #979797;
}
@media (max-width: 569px) {
  .why-delicious .middle-line::before {
    display: none;
  }
}
/* ... */

